# PIC-Crypto

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/crypto/: chacha20.h  pbkdf2.h  prng.h  sha256.h  x25519.h
include/misc/: common.h  constexpr.h  macros.h  memory.h  native.h  resolve.h
loader/: CMakeLists.txt
scripts/: linker.ld
src/: client.cc  server.cc
src/asm/: entry.x64.asm  utils.x64.asm
src/crypto/: chacha20.cc  pbkdf2.cc  prng.cc  sha256.cc  x25519.cc
src/misc/: resolve.cc
